--- a/package.json
+++ b/package.json
@@ -3,9 +3,5 @@
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/mtrestman1/webtesting-ii-challenge.git",
-  "license": "MIT",
-  "devDependencies": {
-    "jest-dom": "^3.1.3",
-    "react-testing-library": "^6.1.2"
-  }
+  "license": "MIT"
 }
